edgevox-onnx/c-api/c-api.h


typedef struct EdgevoxOnnxOnlineTransducerModelConfig {
  const char *encoder;
  const char *decoder;
  const char *joiner;
} EdgevoxOnnxOnlineTransducerModelConfig;
typedef struct EdgevoxOnnxOnlineParaformerModelConfig {
  const char *encoder;
  const char *decoder;
} EdgevoxOnnxOnlineParaformerModelConfig;
typedef struct EdgevoxOnnxOnlineZipformer2CtcModelConfig {
  const char *model;
} EdgevoxOnnxOnlineZipformer2CtcModelConfig;
typedef struct EdgevoxOnnxOnlineNemoCtcModelConfig {
  const char *model;
} EdgevoxOnnxOnlineNemoCtcModelConfig;
typedef struct EdgevoxOnnxOnlineToneCtcModelConfig {
  const char *model;
} EdgevoxOnnxOnlineToneCtcModelConfig;
typedef struct EdgevoxOnnxOnlineModelConfig {
  EdgevoxOnnxOnlineTransducerModelConfig transducer;
  EdgevoxOnnxOnlineParaformerModelConfig paraformer;
  EdgevoxOnnxOnlineZipformer2CtcModelConfig zipformer2_ctc;
  const char *tokens;
  int32_t num_threads;
  const char *provider;
  int32_t debug;
  const char *model_type;
  const char *modeling_unit;
  const char *bpe_vocab;
  const char *tokens_buf;
  int32_t tokens_buf_size;
  EdgevoxOnnxOnlineNemoCtcModelConfig nemo_ctc;
  EdgevoxOnnxOnlineToneCtcModelConfig t_one_ctc;
} EdgevoxOnnxOnlineModelConfig;
typedef struct EdgevoxOnnxFeatureConfig {
  int32_t sample_rate;
  int32_t feature_dim;
} EdgevoxOnnxFeatureConfig;
typedef struct EdgevoxOnnxOnlineCtcFstDecoderConfig {
  const char *graph;
  int32_t max_active;
} EdgevoxOnnxOnlineCtcFstDecoderConfig;
typedef struct EdgevoxOnnxHomophoneReplacerConfig {
  const char *dict_dir;
  const char *lexicon;
  const char *rule_fsts;
} EdgevoxOnnxHomophoneReplacerConfig;
typedef struct EdgevoxOnnxOnlineRecognizerConfig {
  EdgevoxOnnxFeatureConfig feat_config;
  EdgevoxOnnxOnlineModelConfig model_config;
  const char *decoding_method;
  int32_t max_active_paths;
  int32_t enable_endpoint;
  float rule1_min_trailing_silence;
  float rule2_min_trailing_silence;
  float rule3_min_utterance_length;
  const char *hotwords_file;
  float hotwords_score;
  EdgevoxOnnxOnlineCtcFstDecoderConfig ctc_fst_decoder_config;
  const char *rule_fsts;
  const char *rule_fars;
  float blank_penalty;
  const char *hotwords_buf;
  int32_t hotwords_buf_size;
  EdgevoxOnnxHomophoneReplacerConfig hr;
} EdgevoxOnnxOnlineRecognizerConfig;
typedef struct EdgevoxOnnxOnlineRecognizer EdgevoxOnnxOnlineRecognizer;
typedef struct EdgevoxOnnxOnlineStream EdgevoxOnnxOnlineStream;
typedef struct EdgevoxOnnxOfflineTransducerModelConfig {
  const char *encoder;
  const char *decoder;
  const char *joiner;
} EdgevoxOnnxOfflineTransducerModelConfig;
typedef struct EdgevoxOnnxOfflineParaformerModelConfig {
  const char *model;
} EdgevoxOnnxOfflineParaformerModelConfig;
typedef struct EdgevoxOnnxOfflineNemoEncDecCtcModelConfig {
  const char *model;
} EdgevoxOnnxOfflineNemoEncDecCtcModelConfig;
typedef struct EdgevoxOnnxOfflineWhisperModelConfig {
  const char *encoder;
  const char *decoder;
  const char *language;
  const char *task;
  int32_t tail_paddings;
  int32_t enable_token_timestamps;
  int32_t enable_segment_timestamps;
} EdgevoxOnnxOfflineWhisperModelConfig;
typedef struct EdgevoxOnnxOfflineCanaryModelConfig {
  const char *encoder;
  const char *decoder;
  const char *src_lang;
  const char *tgt_lang;
  int32_t use_pnc;
} EdgevoxOnnxOfflineCanaryModelConfig;
typedef struct EdgevoxOnnxOfflineCohereTranscribeModelConfig {
  const char *encoder;
  const char *decoder;
  const char *language;
  int32_t use_punct;
  int32_t use_itn;
} EdgevoxOnnxOfflineCohereTranscribeModelConfig;
typedef struct EdgevoxOnnxOfflineFireRedAsrModelConfig {
  const char *encoder;
  const char *decoder;
} EdgevoxOnnxOfflineFireRedAsrModelConfig;
typedef struct EdgevoxOnnxOfflineFireRedAsrCtcModelConfig {
  const char *model;
} EdgevoxOnnxOfflineFireRedAsrCtcModelConfig;
typedef struct EdgevoxOnnxOfflineMoonshineModelConfig {
  const char *preprocessor;
  const char *encoder;
  const char *uncached_decoder;
  const char *cached_decoder;
  const char *merged_decoder;
} EdgevoxOnnxOfflineMoonshineModelConfig;
typedef struct EdgevoxOnnxOfflineTdnnModelConfig {
  const char *model;
} EdgevoxOnnxOfflineTdnnModelConfig;
typedef struct EdgevoxOnnxOfflineLMConfig {
  const char *model;
  float scale;
} EdgevoxOnnxOfflineLMConfig;
typedef struct EdgevoxOnnxOfflineSenseVoiceModelConfig {
  const char *model;
  const char *language;
  int32_t use_itn;
} EdgevoxOnnxOfflineSenseVoiceModelConfig;
typedef struct EdgevoxOnnxOfflineDolphinModelConfig {
  const char *model;
} EdgevoxOnnxOfflineDolphinModelConfig;
typedef struct EdgevoxOnnxOfflineZipformerCtcModelConfig {
  const char *model;
} EdgevoxOnnxOfflineZipformerCtcModelConfig;
typedef struct EdgevoxOnnxOfflineWenetCtcModelConfig {
  const char *model;
} EdgevoxOnnxOfflineWenetCtcModelConfig;
typedef struct EdgevoxOnnxOfflineOmnilingualAsrCtcModelConfig {
  const char *model;
} EdgevoxOnnxOfflineOmnilingualAsrCtcModelConfig;
typedef struct EdgevoxOnnxOfflineFunASRNanoModelConfig {
  const char *encoder_adaptor;
  const char *llm;
  const char *embedding;
  const char *tokenizer;
  const char *system_prompt;
  const char *user_prompt;
  int32_t max_new_tokens;
  float temperature;
  float top_p;
  int32_t seed;
  const char *language;
  int32_t itn;
  const char *hotwords;
} EdgevoxOnnxOfflineFunASRNanoModelConfig;
typedef struct EdgevoxOnnxOfflineQwen3ASRModelConfig {
  const char *conv_frontend;
  const char *encoder;
  const char *decoder;
  const char *tokenizer;
  int32_t max_total_len;
  int32_t max_new_tokens;
  float temperature;
  float top_p;
  int32_t seed;
  const char *hotwords;
} EdgevoxOnnxOfflineQwen3ASRModelConfig;
typedef struct EdgevoxOnnxOfflineMedAsrCtcModelConfig {
  const char *model;
} EdgevoxOnnxOfflineMedAsrCtcModelConfig;
typedef struct EdgevoxOnnxOfflineModelConfig {
  EdgevoxOnnxOfflineTransducerModelConfig transducer;
  EdgevoxOnnxOfflineParaformerModelConfig paraformer;
  EdgevoxOnnxOfflineNemoEncDecCtcModelConfig nemo_ctc;
  EdgevoxOnnxOfflineWhisperModelConfig whisper;
  EdgevoxOnnxOfflineTdnnModelConfig tdnn;
  const char *tokens;
  int32_t num_threads;
  int32_t debug;
  const char *provider;
  const char *model_type;
  const char *modeling_unit;
  const char *bpe_vocab;
  const char *telespeech_ctc;
  EdgevoxOnnxOfflineSenseVoiceModelConfig sense_voice;
  EdgevoxOnnxOfflineMoonshineModelConfig moonshine;
  EdgevoxOnnxOfflineFireRedAsrModelConfig fire_red_asr;
  EdgevoxOnnxOfflineDolphinModelConfig dolphin;
  EdgevoxOnnxOfflineZipformerCtcModelConfig zipformer_ctc;
  EdgevoxOnnxOfflineCanaryModelConfig canary;
  EdgevoxOnnxOfflineWenetCtcModelConfig wenet_ctc;
  EdgevoxOnnxOfflineOmnilingualAsrCtcModelConfig omnilingual;
  EdgevoxOnnxOfflineMedAsrCtcModelConfig medasr;
  EdgevoxOnnxOfflineFunASRNanoModelConfig funasr_nano;
  EdgevoxOnnxOfflineFireRedAsrCtcModelConfig fire_red_asr_ctc;
  EdgevoxOnnxOfflineQwen3ASRModelConfig qwen3_asr;
  EdgevoxOnnxOfflineCohereTranscribeModelConfig cohere_transcribe;
} EdgevoxOnnxOfflineModelConfig;
typedef struct EdgevoxOnnxOfflineRecognizerConfig {
  EdgevoxOnnxFeatureConfig feat_config;
  EdgevoxOnnxOfflineModelConfig model_config;
  EdgevoxOnnxOfflineLMConfig lm_config;
  const char *decoding_method;
  int32_t max_active_paths;
  const char *hotwords_file;
  float hotwords_score;
  const char *rule_fsts;
  const char *rule_fars;
  float blank_penalty;
  EdgevoxOnnxHomophoneReplacerConfig hr;
} EdgevoxOnnxOfflineRecognizerConfig;
typedef struct EdgevoxOnnxOfflineRecognizer EdgevoxOnnxOfflineRecognizer;
typedef struct EdgevoxOnnxOfflineStream EdgevoxOnnxOfflineStream;
typedef struct EdgevoxOnnxKeywordSpotterConfig {
  EdgevoxOnnxFeatureConfig feat_config;
  EdgevoxOnnxOnlineModelConfig model_config;
  int32_t max_active_paths;
  int32_t num_trailing_blanks;
  float keywords_score;
  float keywords_threshold;
  const char *keywords_file;
  const char *keywords_buf;
  int32_t keywords_buf_size;
} EdgevoxOnnxKeywordSpotterConfig;
typedef struct EdgevoxOnnxKeywordSpotter EdgevoxOnnxKeywordSpotter;
typedef struct EdgevoxOnnxSileroVadModelConfig {
  const char *model;
  float threshold;
  float min_silence_duration;
  float min_speech_duration;
  int32_t window_size;
  float max_speech_duration;
} EdgevoxOnnxSileroVadModelConfig;
typedef struct EdgevoxOnnxTenVadModelConfig {
  const char *model;
  float threshold;
  float min_silence_duration;
  float min_speech_duration;
  int32_t window_size;
  float max_speech_duration;
} EdgevoxOnnxTenVadModelConfig;
typedef struct EdgevoxOnnxVadModelConfig {
  EdgevoxOnnxSileroVadModelConfig silero_vad;
  int32_t sample_rate;
  int32_t num_threads;
  const char *provider;
  int32_t debug;
  EdgevoxOnnxTenVadModelConfig ten_vad;
} EdgevoxOnnxVadModelConfig;
typedef struct EdgevoxOnnxCircularBuffer EdgevoxOnnxCircularBuffer;
typedef struct EdgevoxOnnxSpeechSegment {
  int32_t start;
  float *samples;
  int32_t n;
} EdgevoxOnnxSpeechSegment;
typedef struct EdgevoxOnnxVoiceActivityDetector EdgevoxOnnxVoiceActivityDetector;
typedef struct EdgevoxOnnxOfflineTts EdgevoxOnnxOfflineTts;
typedef struct EdgevoxOnnxWave {
  const float *samples;
  int32_t sample_rate;
  int32_t num_samples;
} EdgevoxOnnxWave;
typedef struct EdgevoxOnnxSpokenLanguageIdentificationWhisperConfig {
  const char *encoder;
  const char *decoder;
  int32_t tail_paddings;
} EdgevoxOnnxSpokenLanguageIdentificationWhisperConfig;
typedef struct EdgevoxOnnxSpokenLanguageIdentificationConfig {
  EdgevoxOnnxSpokenLanguageIdentificationWhisperConfig whisper;
  int32_t num_threads;
  int32_t debug;
  const char *provider;
} EdgevoxOnnxSpokenLanguageIdentificationConfig;
typedef struct EdgevoxOnnxSpokenLanguageIdentification
    EdgevoxOnnxSpokenLanguageIdentification;
EDGEVOX_ONNX_API const EdgevoxOnnxSpokenLanguageIdentification *
EdgevoxOnnxCreateSpokenLanguageIdentification(
    const EdgevoxOnnxSpokenLanguageIdentificationConfig *config);
EDGEVOX_ONNX_API void EdgevoxOnnxDestroySpokenLanguageIdentification(
    const EdgevoxOnnxSpokenLanguageIdentification *slid);
EDGEVOX_ONNX_API EdgevoxOnnxOfflineStream *
EdgevoxOnnxSpokenLanguageIdentificationCreateOfflineStream(
    const EdgevoxOnnxSpokenLanguageIdentification *slid);
typedef struct EdgevoxOnnxSpokenLanguageIdentificationResult {
  const char *lang;
} EdgevoxOnnxSpokenLanguageIdentificationResult;
typedef struct EdgevoxOnnxSpeakerEmbeddingExtractor
    EdgevoxOnnxSpeakerEmbeddingExtractor;
typedef struct EdgevoxOnnxSpeakerEmbeddingManager
    EdgevoxOnnxSpeakerEmbeddingManager;
typedef struct EdgevoxOnnxAudioTagging EdgevoxOnnxAudioTagging;
typedef struct EdgevoxOnnxOfflinePunctuation EdgevoxOnnxOfflinePunctuation;
typedef struct EdgevoxOnnxOnlinePunctuation EdgevoxOnnxOnlinePunctuation;
typedef struct EdgevoxOnnxOfflineSpeakerDiarization
    EdgevoxOnnxOfflineSpeakerDiarization;
typedef struct EdgevoxOnnxOfflineSpeakerDiarizationResult
    EdgevoxOnnxOfflineSpeakerDiarizationResult;
typedef struct EdgevoxOnnxOfflineSpeechDenoiserModelConfig {
  EdgevoxOnnxOfflineSpeechDenoiserGtcrnModelConfig gtcrn;
  int32_t num_threads;
  int32_t debug;
  const char *provider;
  EdgevoxOnnxOfflineSpeechDenoiserDpdfNetModelConfig dpdfnet;
} EdgevoxOnnxOfflineSpeechDenoiserModelConfig;
typedef struct EdgevoxOnnxOfflineSpeechDenoiserConfig {
  EdgevoxOnnxOfflineSpeechDenoiserModelConfig model;
} EdgevoxOnnxOfflineSpeechDenoiserConfig;
typedef struct EdgevoxOnnxOfflineSpeechDenoiser EdgevoxOnnxOfflineSpeechDenoiser;
EDGEVOX_ONNX_API const EdgevoxOnnxOfflineSpeechDenoiser *
EdgevoxOnnxCreateOfflineSpeechDenoiser(
    const EdgevoxOnnxOfflineSpeechDenoiserConfig *config);
EDGEVOX_ONNX_API void EdgevoxOnnxDestroyOfflineSpeechDenoiser(
    const EdgevoxOnnxOfflineSpeechDenoiser *sd);
EDGEVOX_ONNX_API int32_t EdgevoxOnnxOfflineSpeechDenoiserGetSampleRate(
    const EdgevoxOnnxOfflineSpeechDenoiser *sd);
typedef struct EdgevoxOnnxDenoisedAudio {
  const float *samples;
  int32_t n;
  int32_t sample_rate;
} EdgevoxOnnxDenoisedAudio;
EDGEVOX_ONNX_API const EdgevoxOnnxDenoisedAudio *
EdgevoxOnnxOfflineSpeechDenoiserRun(const EdgevoxOnnxOfflineSpeechDenoiser *sd,
                                   const float *samples, int32_t n,
                                   int32_t sample_rate);
EDGEVOX_ONNX_API void EdgevoxOnnxDestroyDenoisedAudio(
    const EdgevoxOnnxDenoisedAudio *p);
typedef struct EdgevoxOnnxOnlineSpeechDenoiserConfig {
  EdgevoxOnnxOfflineSpeechDenoiserModelConfig model;
} EdgevoxOnnxOnlineSpeechDenoiserConfig;
typedef struct EdgevoxOnnxOnlineSpeechDenoiser EdgevoxOnnxOnlineSpeechDenoiser;
EDGEVOX_ONNX_API const EdgevoxOnnxOnlineSpeechDenoiser *
EdgevoxOnnxCreateOnlineSpeechDenoiser(
    const EdgevoxOnnxOnlineSpeechDenoiserConfig *config);
EDGEVOX_ONNX_API void EdgevoxOnnxDestroyOnlineSpeechDenoiser(
    const EdgevoxOnnxOnlineSpeechDenoiser *sd);
EDGEVOX_ONNX_API int32_t EdgevoxOnnxOnlineSpeechDenoiserGetSampleRate(
    const EdgevoxOnnxOnlineSpeechDenoiser *sd);
EDGEVOX_ONNX_API int32_t EdgevoxOnnxOnlineSpeechDenoiserGetFrameShiftInSamples(
    const EdgevoxOnnxOnlineSpeechDenoiser *sd);
EDGEVOX_ONNX_API const EdgevoxOnnxDenoisedAudio *
EdgevoxOnnxOnlineSpeechDenoiserRun(const EdgevoxOnnxOnlineSpeechDenoiser *sd,
                                  const float *samples, int32_t n,
                                  int32_t sample_rate);
EDGEVOX_ONNX_API const EdgevoxOnnxDenoisedAudio *
EdgevoxOnnxOnlineSpeechDenoiserFlush(const EdgevoxOnnxOnlineSpeechDenoiser *sd);
EDGEVOX_ONNX_API void EdgevoxOnnxOnlineSpeechDenoiserReset(
    const EdgevoxOnnxOnlineSpeechDenoiser *sd);