flutter/edgevox_onnx/lib/src/edgevox_onnx_bindings.dart


  @Int32()
  external int numThreads;

  @Int32()
  external int debug;

  external Pointer<Utf8> provider;

  external Pointer<Utf8> modelType;
  external Pointer<Utf8> modelingUnit;
  external Pointer<Utf8> bpeVocab;
  external Pointer<Utf8> telespeechCtc;

  external EdgevoxOnnxOfflineSenseVoiceModelConfig senseVoice;
  external EdgevoxOnnxOfflineMoonshineModelConfig moonshine;
  external EdgevoxOnnxOfflineFireRedAsrModelConfig fireRedAsr;
  external EdgevoxOnnxOfflineDolphinModelConfig dolphin;
  external EdgevoxOnnxOfflineZipformerCtcModelConfig zipformerCtc;
  external EdgevoxOnnxOfflineCanaryModelConfig canary;
  external EdgevoxOnnxOfflineWenetCtcModelConfig wenetCtc;
  external EdgevoxOnnxOfflineOmnilingualAsrCtcModelConfig omnilingual;
  external EdgevoxOnnxOfflineMedAsrCtcModelConfig medasr;
  external EdgevoxOnnxOfflineFunAsrNanoModelConfig funasrNano;
  external EdgevoxOnnxOfflineFireRedAsrCtcModelConfig fireRedAsrCtc;
  external EdgevoxOnnxOfflineQwen3AsrModelConfig qwen3Asr;
  external EdgevoxOnnxOfflineCohereTranscribeModelConfig cohereTranscribe;
}

final class EdgevoxOnnxOfflineRecognizerConfig extends Struct {
  external EdgevoxOnnxFeatureConfig feat;
  external EdgevoxOnnxOfflineModelConfig model;
  external EdgevoxOnnxOfflineLMConfig lm;
  external Pointer<Utf8> decodingMethod;

  @Int32()
  external int maxActivePaths;

  external Pointer<Utf8> hotwordsFile;

  @Float()
  external double hotwordsScore;

  external Pointer<Utf8> ruleFsts;
  external Pointer<Utf8> ruleFars;

  @Float()
  external double blankPenalty;
  external EdgevoxOnnxHomophoneReplacerConfig hr;
}

final class EdgevoxOnnxOnlineTransducerModelConfig extends Struct {
  external Pointer<Utf8> encoder;
  external Pointer<Utf8> decoder;
  external Pointer<Utf8> joiner;
}

final class EdgevoxOnnxOnlineParaformerModelConfig extends Struct {
  external Pointer<Utf8> encoder;
  external Pointer<Utf8> decoder;
}

final class EdgevoxOnnxOnlineZipformer2CtcModelConfig extends Struct {
  external Pointer<Utf8> model;
}

final class EdgevoxOnnxOnlineNemoCtcModelConfig extends Struct {
  external Pointer<Utf8> model;
}

final class EdgevoxOnnxOnlineToneCtcModelConfig extends Struct {
  external Pointer<Utf8> model;
}

final class EdgevoxOnnxOnlineModelConfig extends Struct {
  external EdgevoxOnnxOnlineTransducerModelConfig transducer;
  external EdgevoxOnnxOnlineParaformerModelConfig paraformer;
  external EdgevoxOnnxOnlineZipformer2CtcModelConfig zipformer2Ctc;

  external Pointer<Utf8> tokens;

  @Int32()
  external int numThreads;

  external Pointer<Utf8> provider;

  @Int32()
  external int debug;

  external Pointer<Utf8> modelType;

  external Pointer<Utf8> modelingUnit;

  external Pointer<Utf8> bpeVocab;

  external Pointer<Utf8> tokensBuf;

  @Int32()
  external int tokensBufSize;

  external EdgevoxOnnxOnlineNemoCtcModelConfig nemoCtc;

  external EdgevoxOnnxOnlineToneCtcModelConfig toneCtc;
}

final class EdgevoxOnnxOnlineCtcFstDecoderConfig extends Struct {
  external Pointer<Utf8> graph;

  @Int32()
  external int maxActive;
}

final class EdgevoxOnnxHomophoneReplacerConfig extends Struct {
  external Pointer<Utf8> dictDir;
  external Pointer<Utf8> lexicon;
  external Pointer<Utf8> ruleFsts;
}

final class EdgevoxOnnxOnlineRecognizerConfig extends Struct {
  external EdgevoxOnnxFeatureConfig feat;
  external EdgevoxOnnxOnlineModelConfig model;
  external Pointer<Utf8> decodingMethod;

  @Int32()
  external int maxActivePaths;

  @Int32()
  external int enableEndpoint;

  @Float()
  external double rule1MinTrailingSilence;

  @Float()
  external double rule2MinTrailingSilence;

  @Float()
  external double rule3MinUtteranceLength;

  external Pointer<Utf8> hotwordsFile;

  @Float()
  external double hotwordsScore;

  external EdgevoxOnnxOnlineCtcFstDecoderConfig ctcFstDecoderConfig;

  external Pointer<Utf8> ruleFsts;
  external Pointer<Utf8> ruleFars;

  @Float()
  external double blankPenalty;

  external Pointer<Utf8> hotwordsBuf;

  @Int32()
  external int hotwordsBufSize;
  external EdgevoxOnnxHomophoneReplacerConfig hr;
}

final class EdgevoxOnnxSileroVadModelConfig extends Struct {
  external Pointer<Utf8> model;

  @Float()
  external double threshold;

  @Float()
  external double minSilenceDuration;

  @Float()
  external double minSpeechDuration;

  @Int32()
  external int windowSize;

  @Float()
  external double maxSpeechDuration;
}

final class EdgevoxOnnxTenVadModelConfig extends Struct {
  external Pointer<Utf8> model;

  @Float()
  external double threshold;

  @Float()
  external double minSilenceDuration;

  @Float()
  external double minSpeechDuration;

  @Int32()
  external int windowSize;

  @Float()
  external double maxSpeechDuration;
}

final class EdgevoxOnnxVadModelConfig extends Struct {
  external EdgevoxOnnxSileroVadModelConfig sileroVad;

  @Int32()
  external int sampleRate;

  @Int32()
  external int numThreads;

  external Pointer<Utf8> provider;

  @Int32()
  external int debug;

  external EdgevoxOnnxTenVadModelConfig tenVad;
}

final class EdgevoxOnnxSpeechSegment extends Struct {
  @Int32()
  external int start;

  external Pointer<Float> samples;

  @Int32()
  external int n;
}

final class EdgevoxOnnxWave extends Struct {
  external Pointer<Float> samples;

  @Int32()
  external int sampleRate;

  @Int32()
  external int numSamples;
}

final class EdgevoxOnnxKeywordSpotterConfig extends Struct {
  external EdgevoxOnnxFeatureConfig feat;

  external EdgevoxOnnxOnlineModelConfig model;

  @Int32()
  external int maxActivePaths;

  @Int32()
  external int numTrailingBlanks;

  @Float()
  external double keywordsScore;

  @Float()
  external double keywordsThreshold;

  external Pointer<Utf8> keywordsFile;

  external Pointer<Utf8> keywordsBuf;

  @Int32()
  external int keywordsBufSize;
}

final class EdgevoxOnnxOfflinePunctuation extends Opaque {}

final class EdgevoxOnnxOnlinePunctuation extends Opaque {}

final class EdgevoxOnnxAudioTagging extends Opaque {}

final class EdgevoxOnnxKeywordSpotter extends Opaque {}

final class EdgevoxOnnxOfflineTts extends Opaque {}

final class EdgevoxOnnxCircularBuffer extends Opaque {}

final class EdgevoxOnnxVoiceActivityDetector extends Opaque {}

final class EdgevoxOnnxOnlineStream extends Opaque {}

final class EdgevoxOnnxOnlineRecognizer extends Opaque {}

final class EdgevoxOnnxOfflineRecognizer extends Opaque {}

final class EdgevoxOnnxOfflineStream extends Opaque {}

final class EdgevoxOnnxSpeakerEmbeddingExtractor extends Opaque {}

final class EdgevoxOnnxSpeakerEmbeddingManager extends Opaque {}

final class EdgevoxOnnxOfflineSpeakerDiarization extends Opaque {}

final class EdgevoxOnnxOfflineSpeakerDiarizationResult extends Opaque {}

final class EdgevoxOnnxSpokenLanguageIdentificationWhisperConfig extends Struct {
  external Pointer<Utf8> encoder;
  external Pointer<Utf8> decoder;

  @Int32()
  external int tailPaddings;
}

final class EdgevoxOnnxSpokenLanguageIdentificationConfig extends Struct {
  external EdgevoxOnnxSpokenLanguageIdentificationWhisperConfig whisper;

  @Int32()
  external int numThreads;

  @Int32()
  external int debug;

  external Pointer<Utf8> provider;
}

final class EdgevoxOnnxSpokenLanguageIdentificationResult extends Struct {
  external Pointer<Utf8> lang;
}

final class EdgevoxOnnxSpokenLanguageIdentification extends Opaque {}

final class EdgevoxOnnxOfflineSpeechDenoiser extends Opaque {}

final class EdgevoxOnnxOnlineSpeechDenoiser extends Opaque {}

typedef EdgevoxOnnxCreateOfflineSpeechDenoiserNative =
    Pointer<EdgevoxOnnxOfflineSpeechDenoiser> Function(
      Pointer<EdgevoxOnnxOfflineSpeechDenoiserConfig>,
    );

typedef EdgevoxOnnxCreateOfflineSpeechDenoiser =
    EdgevoxOnnxCreateOfflineSpeechDenoiserNative;

typedef EdgevoxOnnxDestroyOfflineSpeechDenoiserNative =
    Void Function(Pointer<EdgevoxOnnxOfflineSpeechDenoiser>);

typedef EdgevoxOnnxDestroyOfflineSpeechDenoiser =
    void Function(Pointer<EdgevoxOnnxOfflineSpeechDenoiser>);

typedef EdgevoxOnnxOfflineSpeechDenoiserGetSampleRateNative =
    Int32 Function(Pointer<EdgevoxOnnxOfflineSpeechDenoiser>);

typedef EdgevoxOnnxOfflineSpeechDenoiserGetSampleRate =
    int Function(Pointer<EdgevoxOnnxOfflineSpeechDenoiser>);

typedef EdgevoxOnnxOfflineSpeechDenoiserRunNative =
    Pointer<EdgevoxOnnxDenoisedAudio> Function(
      Pointer<EdgevoxOnnxOfflineSpeechDenoiser>,
      Pointer<Float>,
      Int32,
      Int32,
    );

typedef EdgevoxOnnxOfflineSpeechDenoiserRun =
    Pointer<EdgevoxOnnxDenoisedAudio> Function(
      Pointer<EdgevoxOnnxOfflineSpeechDenoiser>,
      Pointer<Float>,
      int,
      int,
    );

typedef EdgevoxOnnxDestroyDenoisedAudioNative =
    Void Function(Pointer<EdgevoxOnnxDenoisedAudio>);

typedef EdgevoxOnnxDestroyDenoisedAudio =
    void Function(Pointer<EdgevoxOnnxDenoisedAudio>);

typedef EdgevoxOnnxCreateOnlineSpeechDenoiserNative =
    Pointer<EdgevoxOnnxOnlineSpeechDenoiser> Function(
      Pointer<EdgevoxOnnxOnlineSpeechDenoiserConfig>,
    );

typedef EdgevoxOnnxCreateOnlineSpeechDenoiser =
    EdgevoxOnnxCreateOnlineSpeechDenoiserNative;

typedef EdgevoxOnnxDestroyOnlineSpeechDenoiserNative =
    Void Function(Pointer<EdgevoxOnnxOnlineSpeechDenoiser>);

typedef EdgevoxOnnxDestroyOnlineSpeechDenoiser =
    void Function(Pointer<EdgevoxOnnxOnlineSpeechDenoiser>);

typedef EdgevoxOnnxOnlineSpeechDenoiserGetSampleRateNative =
    Int32 Function(Pointer<EdgevoxOnnxOnlineSpeechDenoiser>);

typedef EdgevoxOnnxOnlineSpeechDenoiserGetSampleRate =
    int Function(Pointer<EdgevoxOnnxOnlineSpeechDenoiser>);

typedef EdgevoxOnnxOnlineSpeechDenoiserGetFrameShiftInSamplesNative =
    Int32 Function(Pointer<EdgevoxOnnxOnlineSpeechDenoiser>);

typedef EdgevoxOnnxOnlineSpeechDenoiserGetFrameShiftInSamples =
    int Function(Pointer<EdgevoxOnnxOnlineSpeechDenoiser>);

typedef EdgevoxOnnxOnlineSpeechDenoiserRunNative =
    Pointer<EdgevoxOnnxDenoisedAudio> Function(
      Pointer<EdgevoxOnnxOnlineSpeechDenoiser>,
      Pointer<Float>,
      Int32,
      Int32,
    );

typedef EdgevoxOnnxOnlineSpeechDenoiserRun =
    Pointer<EdgevoxOnnxDenoisedAudio> Function(
      Pointer<EdgevoxOnnxOnlineSpeechDenoiser>,
      Pointer<Float>,
      int,
      int,
    );

typedef EdgevoxOnnxOnlineSpeechDenoiserFlushNative =
    Pointer<EdgevoxOnnxDenoisedAudio> Function(
      Pointer<EdgevoxOnnxOnlineSpeechDenoiser>,
    );

typedef EdgevoxOnnxOnlineSpeechDenoiserFlush =
    Pointer<EdgevoxOnnxDenoisedAudio> Function(
      Pointer<EdgevoxOnnxOnlineSpeechDenoiser>,
    );

typedef EdgevoxOnnxOnlineSpeechDenoiserResetNative =
    Void Function(Pointer<EdgevoxOnnxOnlineSpeechDenoiser>);

typedef EdgevoxOnnxOnlineSpeechDenoiserReset =
    void Function(Pointer<EdgevoxOnnxOnlineSpeechDenoiser>);

typedef EdgevoxOnnxCreateSpokenLanguageIdentificationNative =
    Pointer<EdgevoxOnnxSpokenLanguageIdentification> Function(
      Pointer<EdgevoxOnnxSpokenLanguageIdentificationConfig>,
    );

typedef EdgevoxOnnxCreateSpokenLanguageIdentification =
    EdgevoxOnnxCreateSpokenLanguageIdentificationNative;

typedef EdgevoxOnnxDestroySpokenLanguageIdentificationNative =
    Void Function(Pointer<EdgevoxOnnxSpokenLanguageIdentification>);

typedef EdgevoxOnnxDestroySpokenLanguageIdentification =
    void Function(Pointer<EdgevoxOnnxSpokenLanguageIdentification>);

typedef EdgevoxOnnxSpokenLanguageIdentificationCreateOfflineStreamNative =
    Pointer<EdgevoxOnnxOfflineStream> Function(
      Pointer<EdgevoxOnnxSpokenLanguageIdentification>,
    );

typedef EdgevoxOnnxSpokenLanguageIdentificationCreateOfflineStream =
    EdgevoxOnnxSpokenLanguageIdentificationCreateOfflineStreamNative;

typedef EdgevoxOnnxSpokenLanguageIdentificationComputeNative =
    Pointer<EdgevoxOnnxSpokenLanguageIdentificationResult> Function(
      Pointer<EdgevoxOnnxSpokenLanguageIdentification>,
      Pointer<EdgevoxOnnxOfflineStream>,
    );
